# mcp-snowflake-reader

./: .env.template  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  connection.json  main.py  package.json  preinstall.sh  pyproject.toml  requirements.txt  smithery.yaml  test_uvx_cli.sh
src/mcp_snowflake_reader/: main.py
